<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sarahane.tapetapdesign.LogIn"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/logo"
        android:layout_width = "226dp"
        android:layout_height= "221dp"
        android:src="@drawable/tapetaplogo"
        tools:layout_editor_absoluteY="36dp"
        tools:layout_editor_absoluteX="92dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/background1"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/whiteback"
        android:layout_marginBottom="119dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/logo"
        android:layout_alignRight="@+id/logo"
        android:layout_alignTop="@+id/background1"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/psw"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_alignStart="@+id/username"
        android:layout_below="@+id/username"
        android:ems="10"
        android:hint="@string/pswd"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:background="@drawable/red_but"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="19dp"
        android:text="@string/forgot_pass" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/password"
        android:layout_marginTop="21dp"
        android:text="@string/add_user" />

</RelativeLayout>
