<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sarahane.tapetapdesign.AddUSer"
    android:background="@drawable/background">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/tapetaplogo"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/linear" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/whitesq2"
                android:layout_width="250dp"
                android:layout_height="300dp"
                android:src="@drawable/whiteback" />
        </LinearLayout>

    <EditText
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/linear"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/add_new"
        android:textAlignment="center"
        android:textColor="#0080ff"
        android:textStyle="bold"
        android:typeface="monospace"
        android:background="@android:color/transparent"/>

    <EditText
        android:id="@+id/add_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/linear"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:typeface="monospace"/>


        <EditText
            android:id="@+id/add_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/linear"
            android:layout_centerInParent="true"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:hint="@string/pwd1"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/add_pwd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/linear"
            android:layout_centerInParent="true"
            android:layout_marginTop="150dp"
            android:ems="10"
            android:hint="@string/pwd2"
            android:inputType="textPassword"
            android:textAlignment="center" />
    <EditText
        android:id="@+id/add_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/linear"
        android:layout_centerInParent="true"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:typeface="monospace"/>

    <Button
        android:id="@+id/add_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_but"
        android:text="@string/add_us"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
    </RelativeLayout>
