<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sarahane.tapetapdesign.ChildMenu"
    android:background="@drawable/background">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/alva"
        app:civ_border_width="6dp"
        app:civ_border_color="#FFFFFF"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/whitesq2"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/whiteback" />
    </LinearLayout>

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/linear"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:ems="10"
        android:text="@string/edit_user"
        android:textAlignment="center"
        android:textColor="#0080ff"
        android:textStyle="bold"
        android:typeface="monospace"
        android:background="@android:color/transparent"/>

    <EditText
        android:id="@+id/add_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/linear"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:typeface="monospace"/>


    <EditText
        android:id="@+id/add_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/linear"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/pwd1"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/add_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/linear"
        android:layout_centerInParent="true"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:typeface="monospace"/>

    <Button
        android:id="@+id/add_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/red_but"
        android:text="SAVE INFO"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
</RelativeLayout>

